Change home.css fix three column on small screen

--- a/overrides/assets/stylesheets/home.css
+++ b/overrides/assets/stylesheets/home.css
@@ -126,9 +126,10 @@
 
     .feature h2 { margin-left: 20px; }
 
-    .feature cards {
+    .feature .cards {
         flex: 1;
         min-width: 0;
+        flex-direction: column;
     }
 }
 
